<resources>
    <string name="app_name">Vocabulary</string>
    <string name="recently_words">Недавно выученные слова</string>
    <string name="menu_lang_en">ENG</string>
    <string name="menu_lang_ru">RUS</string>
    <string name="show_all_words">Показать все слова</string>
    <string name="lear_words">Учить слова</string>
    <string name="add_words">Добавить слова</string>
    <string name="translated">Translated</string>
    <string name="translatable">Translatable</string>
    <string name="other_translated">Другие переводы</string>
    <string name="input_word">Введите слово на английском</string>
    <string name="input_translate">Введите перевод</string>
    <string name="btnSave">Сохранить слово</string>
    <string name="word_add">Слово добавлено в словарь</string>
    <string name="empty_field">Необходимо заполнить все поля</string>
    <string name="empty_en">Введите английское слово</string>
    <string name="empty_ru">Введите перевод</string>
    <string name="already_exist">Такое слово уже существует</string>
    <string name="select_action">Выберите действие</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="editable">Редактирование</string>
    <string name="what_word">Какое слово</string>
    <string name="russian">Русское</string>
    <string name="english">Английское</string>
    <string name="choose">Выберите рубрику</string>
    <string name="select_words_to_learn">Выделите слова для изучения</string>
    <string name="to_learn">Учить</string>
    <string name="next">Далее</string>
    <string name="check_yourself">Проверь себя</string>
    <string name="right_answer">Правильный ответ</string>
    <string name="words_not_found">Слова не найдены</string>
    <string name="RusPlusEng">Русское и английское</string>
    <string name="learned">Выучил</string>
    <string name="date">Дата</string>
    <string name="reveal">Выученность</string>
    <string name="sort_reveal">Сортировка выученность</string>
    <string name="select_at_least_two_words">Выберите хотя бы 2 слова</string>
    <string name="statistic_add">Статистика добавлений</string>
    <string name="statistic_learn">Статистика выученности</string>
    <string name="wait">Подождите</string>
    <string name="splash_info">Vocabulary app</string>
    <string name="on_add">По дате добавления</string>
    <string name="on_learned">По дате выученности</string>
    <string name="searching">Идет поиск, подождите</string>
    <string name="forgot">Забыл</string>
    <string name="input_association">Введите ассоциацию</string>
    <string name="add_association">Добавление ассоциации</string>
</resources>
