<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgLangs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbRu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian" />

        <RadioButton
            android:id="@+id/rbEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/rbRuEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RusPlusEng" />
    </RadioGroup>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvWords"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/learned"
        android:text="@string/learned"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>