<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_words_to_learn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_learn"
            android:visibility="visible" />

        <android.support.v7.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_circle_button_color_white"
            android:layout_gravity="center_vertical"
            attr:iconifiedByDefault="false"

            android:layout_height="wrap_content" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/rgLangs1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbRu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian" />

        <RadioButton
            android:id="@+id/rbEn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/rbRuEn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RusPlusEng" />
    </RadioGroup>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvSelectableWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
        app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollVerticalTrackDrawable="@drawable/line_drawable" />


</LinearLayout>