<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgAssociation"
            android:layout_width="75dp"
            android:layout_height="75dp" />
        <TextView
            android:id="@+id/tvTranslatable"
            android:text="@string/translatable"
            android:layout_toEndOf="@id/imgAssociation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvTranslated"
            android:text="@string/translated"
            android:layout_toEndOf="@id/imgAssociation"
            android:layout_below="@id/tvTranslatable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <TextView
        android:text="@string/other_translated"
        android:textAllCaps="true"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvOtherTranslation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>