<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:mContext="com.example.roman.vocabulary.activity.MainActivity">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activityContainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar"
                android:theme="@style/VocabularyBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/toolBarTitle"
                    android:text="@string/app_name"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
            </android.support.v7.widget.Toolbar>
            <include layout="@layout/shadow_toolbar" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/recently_words"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvWords"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                </android.support.v7.widget.RecyclerView>

                <RadioGroup
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rbRu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:padding="7dp"
                        android:background="@drawable/rbtn_selector"
                        android:text="@string/menu_lang_en"
                        />
                    <RadioButton
                        android:id="@+id/rbEn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:padding="7dp"
                        android:background="@drawable/rbtn_selector"
                        android:text="@string/menu_lang_ru"
                        />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <fragment
            android:id="@+id/navigationDrawer"
            android:name="com.example.roman.vocabulary.fragment.navigation_drawer.NavigationDrawerFragment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            tools:layout="@layout/fragment_navigation_drawer"/>

    </android.support.v4.widget.DrawerLayout>
</LinearLayout>
