<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activityContainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar"
                android:theme="@style/VocabularyBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/toolBarTitle"
                    android:text="@string/add_words"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
            </android.support.v7.widget.Toolbar>
            <include layout="@layout/shadow_toolbar" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etTranslatable"
                        android:hint="@string/input_word"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/etAssociation"
                        android:hint="@string/input_association"
                        android:layout_below="@id/etTranslatable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <ViewFlipper
                        android:id="@+id/flipSearch"
                        android:layout_toRightOf="@id/etTranslatable"
                        android:layout_marginLeft="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_search" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_write" />
                    </ViewFlipper>

                    <ViewFlipper
                        android:id="@+id/flipWrite"
                        android:inAnimation="@anim/flipin"
                        android:layout_toRightOf="@id/etTranslatable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_write" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_search" />
                    </ViewFlipper>
                </RelativeLayout>
            <ViewFlipper
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:measureAllChildren="false"
                >
                <include layout="@layout/write_words"/>
                <include layout="@layout/search_words"/>
            </ViewFlipper>
            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSave" />
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>